# parse_bot

./: .env_docker_example  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  tk.json
apps/bot/: admin.py  apps.py  models.py
apps/bot/migrations/: 0001_initial.py  0002_faq_manager_delete_bot_remove_botmessage_media_and_more.py
apps/broadcast/: admin.py  apps.py  models.py  signals.py
apps/broadcast/migrations/: 0001_initial.py  0002_alter_broadcastmessage_scheduled_time.py
apps/lottery/: admin.py  apps.py  models.py  signals.py  tasks.py
apps/lottery/migrations/: 0001_initial.py  0002_lottery_photo.py
apps/news/: admin.py  api_parse.py  apps.py  exceptions.py  helpers.py  models.py  scrapers.py  signals.py  tasks.py  validators.py
apps/news/migrations/: 0001_initial.py  0002_country_name_country_param_value_language_name_and_more.py  0003_alter_language_param_value.py  0004_alter_newschannel_link.py  0006_pendingnews.py  0011_otp.py  (+5 more)
apps/products/: admin.py  apps.py  models.py  utils.py
apps/users/: admin.py  apps.py  models.py
config/: __init__.py  celery.py  constants.py  settings.py  singleton.py  urls.py
fixtures/: db.json  filters_country.json  filters_language.json  filters_region.json  filters_theme.json  filters_type.json
infra/: nginx.conf  nginx_prod.conf
tg_bot/: main.py  tasks.py
tg_bot/core/: config.py  logger.py
tg_bot/middlewares/: auth.py
tg_bot/utils/: __init__.py  delete_message.py  send_message.py
utils/: __init__.py  choose_winner.py  get_data.py  get_username.py
(+37 files in other folders)
