[tool.poetry]
name = "bottec-template"
version = "0.1.0"
description = ""
authors = ["SowaSova <cei4bio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
django = "^5.1.4"
aioredis = "^2.0.1"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
uvicorn = "^0.32.1"
loguru = "^0.7.3"
whitenoise = "^6.8.2"
redis = "^5.2.1"
apscheduler = "^3.11.0"
environs = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
