[tool.poetry]
name = "parse-bot"
version = "0.1.0"
description = ""
authors = ["SowaSova <cei4bio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
django = "^5.1.4"
aioredis = "^2.0.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.1"
loguru = "^0.7.3"
whitenoise = "^6.8.2"
apscheduler = "^3.11.0"
environs = "^11.2.1"
beautifulsoup4 = "^4.12.3"
pillow = "^11.0.0"
scrapy = "^2.12.0"
celery = {extras = ["redis"], version = "^5.4.0"}
django-redis = "^5.4.0"
botasaurus = "^4.0.76"
cloudscraper = "^1.2.71"
daphne = "^4.1.2"
celery-once = "^3.0.1"
selenium = "^4.27.1"
psycopg2-binary = "^2.9.10"
undetected-chromedriver = "^3.5.5"
selenium-stealth = "^1.0.6"
seleniumbase = "^4.33.14"
fake-useragent = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
